# Smart_Inventory_Management_System

./: .gitignore  CMakeLists.txt  README.md  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
